--- a/app.json
+++ b/app.json
@@ -23,11 +23,16 @@
     },
     "web": {
       "bundler": "metro",
-      "output": "static",
+      "output": "server",
       "favicon": "./assets/images/favicon.png"
     },
     "plugins": [
-      "expo-router"
+      [
+        "expo-router",
+        {
+          "origin": "https://money-thing.dev/"
+        }
+      ]
     ],
     "experiments": {
       "typedRoutes": true
