--- a/package.json
+++ b/package.json
@@ -43,7 +43,9 @@
     "jest": "^29.2.1",
     "jest-expo": "~51.0.1",
     "react-test-renderer": "18.2.0",
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.3",
+    "@prisma/client": "^5.13.0",
+    "prisma": "^5.13.0"
   },
   "private": true
 }
