--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-navigation/native": "^6.0.2",
     "expo": "~51.0.0-preview.7",
     "expo-constants": "~16.0.1",
@@ -33,19 +34,20 @@
     "react-native-reanimated": "3.9.0-rc.1",
     "react-native-safe-area-context": "4.10.0-rc.1",
     "react-native-screens": "3.31.0-rc.1",
-    "react-native-web": "~0.19.10"
+    "react-native-web": "~0.19.10",
+    "expo-crypto": "~13.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@prisma/client": "^5.13.0",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.2.45",
     "@types/react-test-renderer": "^18.0.7",
     "jest": "^29.2.1",
     "jest-expo": "~51.0.1",
+    "prisma": "^5.13.0",
     "react-test-renderer": "18.2.0",
-    "typescript": "^5.1.3",
-    "@prisma/client": "^5.13.0",
-    "prisma": "^5.13.0"
+    "typescript": "^5.1.3"
   },
   "private": true
 }
