--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-navigation/native": "^6.0.2",
     "expo": "~51.0.0-preview.7",
     "expo-constants": "~16.0.1",
+    "expo-crypto": "~13.0.2",
     "expo-font": "~12.0.4",
     "expo-linking": "~6.3.1",
     "expo-router": "3.5.3",
@@ -27,6 +28,8 @@
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.2",
     "expo-web-browser": "~13.0.2",
+    "lodash": "^4.17.21",
+    "node-persist": "^4.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.0",
@@ -34,8 +37,7 @@
     "react-native-reanimated": "3.9.0-rc.1",
     "react-native-safe-area-context": "4.10.0-rc.1",
     "react-native-screens": "3.31.0-rc.1",
-    "react-native-web": "~0.19.10",
-    "expo-crypto": "~13.0.2"
+    "react-native-web": "~0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
