--- a/package.json
+++ b/package.json
@@ -18,26 +18,29 @@
     "@expo/vector-icons": "^14.0.0",
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-navigation/native": "^6.0.2",
-    "expo": "~51.0.0-preview.7",
+    "@types/lodash": "^4.17.1",
+    "@types/node-persist": "^3.1.8",
+    "expo": "^51.0.5",
     "expo-constants": "~16.0.1",
     "expo-crypto": "~13.0.2",
     "expo-font": "~12.0.4",
     "expo-linking": "~6.3.1",
-    "expo-router": "3.5.3",
-    "expo-splash-screen": "~0.27.2",
+    "expo-router": "~3.5.12",
+    "expo-splash-screen": "~0.27.4",
     "expo-status-bar": "~1.12.1",
-    "expo-system-ui": "~3.0.2",
-    "expo-web-browser": "~13.0.2",
+    "expo-system-ui": "~3.0.4",
+    "expo-web-browser": "~13.0.3",
     "lodash": "^4.17.21",
     "node-persist": "^4.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.74.0",
-    "react-native-gesture-handler": "~2.16.0",
-    "react-native-reanimated": "3.9.0-rc.1",
-    "react-native-safe-area-context": "4.10.0-rc.1",
-    "react-native-screens": "3.31.0-rc.1",
-    "react-native-web": "~0.19.10"
+    "react-native": "0.74.1",
+    "react-native-gesture-handler": "~2.16.1",
+    "react-native-reanimated": "~3.10.1",
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "3.31.1",
+    "react-native-web": "~0.19.10",
+    "unique-names-generator": "^4.7.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -49,7 +52,7 @@
     "jest-expo": "~51.0.1",
     "prisma": "^5.13.0",
     "react-test-renderer": "18.2.0",
-    "typescript": "^5.1.3"
+    "typescript": "~5.3.3"
   },
   "private": true
 }
