--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "expo-web-browser": "~13.0.3",
     "lodash": "^4.17.21",
     "node-persist": "^4.0.1",
+    "patch-package": "^8.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.1",
@@ -53,7 +54,6 @@
     "@types/react-test-renderer": "^18.0.7",
     "jest": "^29.2.1",
     "jest-expo": "~51.0.1",
-    "prisma": "^5.13.0",
     "react-test-renderer": "18.2.0",
     "typescript": "~5.3.3"
   },
